fix: z-index of modal windows has been changed

--- a/scss/front/index/_page-header.scss
+++ b/scss/front/index/_page-header.scss
@@ -8,7 +8,7 @@
   background: $brand-white;
   margin: 0;
   box-shadow: 0px 2px 10px rgba(35, 35, 35, 0.1);
-  z-index: 3000;
+  z-index: 2000;
 
   @media #{$sm} {
     height: 80px;
